add some more challenge mode lang keys

--- a/Client/overrides/resources/mce/lang/en_us.lang
+++ b/Client/overrides/resources/mce/lang/en_us.lang
@@ -150,10 +150,18 @@ mce.xreliquary.tip.restores_percent_health=Restores %s% HP
 
 
 #Challenge Mode specific
+mce.challengemode.generic.tip.has_crafting_quirk=Hold SHIFT for info about Crafting this item!
+mce.challengemode.generic.tip.damages_inscription_tool_instead_of_consume=Crafting consumes Uses from the Inscription Tool,<BR>It does not consume it immediately.
+
+mce.challengemode.minecraft.tip.wither_only_in_some_dims=In Challenge Mode, The Wither can only<BR>be summoned in select dimensions.<BR>Hold SHIFT for a list.
+mce.challengemode.minecraft.tip.wither_only_in_some_dims.shift=Dimensions The Wither can be summoned in:<BR>The Overworld<BR>The Twilight Forest<BR>Ratlantis<BR>The Midnight
+
 mce.challengemode.thermal.tip.hardened_glass_needs_osmium=In Challenge Mode, Requires Osmium instead of Obsidian.<BR>If you need this for crafting, Fused Quartz works instead!
 
 mce.challengemode.tombstone.tip.grave_key_cant_teleport=In Challenge Mode, Cannot be used to Teleport when Enchanted.
 mce.challengemode.tombstone.message.grave_key_teleport_fail=§cThe Key's magic is too §ochallenging§c to channel.
+
+mce.challengemode.mysticalagriculture.tip.only_insanium_tinker_table=In Challenge Mode, Can only be made out of Insanium.
 
 #Betweenlands Restrictions
 mce.challengemode.betweenlands_restrictions.denied_entry_message.1=You are in Challenge Mode, and cannot travel to the Betweenlands with items not from it!
