add enderio blueprint localization key

--- a/Client/overrides/resources/mce/lang/en_us.lang
+++ b/Client/overrides/resources/mce/lang/en_us.lang
@@ -5,6 +5,7 @@ desc.immersiveengineering.info.mineral.Atometal=Deep Atometal
 desc.immersiveengineering.info.mineral.mooncheese=Lunar Cheese
 
 #Custom IE Blueprints
+desc.immersiveengineering.info.blueprint.enderio_components=Ender Engineering Components
 desc.immersiveengineering.info.blueprint.matter_engineering=Matter-Energy Components
 
 #Quest Chapter Names
